crates/franken-node/tests/snapshots/supply_chain_golden_artifacts__canonical_serializer_minimal_object.snap
---
source: crates/franken-node/tests/supply_chain_golden_artifacts.rs
expression: scrubbed
---
Canonical Serialization Result:
Object Type: trust_receipt
Byte Length: 72
Canonical Hex: [SIG]
Schema Version: 1
Domain Prefix: trust_object_v1
Deterministic: true
