crates/franken-node/tests/snapshots/supply_chain_golden_artifacts__canonical_serializer_trust_object.snap
---
source: crates/franken-node/tests/supply_chain_golden_artifacts.rs
expression: scrubbed
---
Canonical Serialization Result:
Object Type: trust_card
Byte Length: 589
Canonical Hex: [SIG][SIG][SIG][SIG][SIG]
Schema Version: 1
Domain Prefix: trust_object_v1
Deterministic: true
