crates/franken-node/tests/snapshots/supply_chain_golden_artifacts__cli_verify_output_failure.snap
---
source: crates/franken-node/tests/supply_chain_golden_artifacts.rs
expression: scrubbed
---
{
  "command": "verify compatibility",
  "contract_version": "v1.0",
  "schema_version": "verify-contract/v1",
  "compat_version": 2,
  "verdict": "FAIL",
  "status": "fail",
  "exit_code": 1,
  "reason": "Compatibility check failed: 3 breaking changes detected in API surface",
  "details": {
    "breaking_changes": [
      {
        "type": "removed_field",
        "location": "Config.timeout_ms",
        "impact": "high"
      },
      {
        "type": "changed_type",
        "location": "Response.status",
        "impact": "medium"
      },
      {
        "type": "removed_method",
        "location": "Client.deprecated_call",
        "impact": "low"
      }
    ],
    "migration_required": true
  }
}
