crates/franken-node/tests/snapshots/supply_chain_golden_artifacts__cli_verify_output_success.snap
---
source: crates/franken-node/tests/supply_chain_golden_artifacts.rs
expression: scrubbed
---
{
  "command": "verify module",
  "contract_version": "v1.0",
  "schema_version": "verify-contract/v1",
  "compat_version": 1,
  "verdict": "PASS",
  "status": "pass",
  "exit_code": 0,
  "reason": "Module verification completed successfully with no violations"
}
